--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1> Why I want to become a developer</h1>
+    <p> I want to become a software developer because
+	    I like to make websites, filling colors and learning 
+		the logics by using javascript.
+	</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
