--- a/main.html
+++ b/main.html
@@ -7,14 +7,10 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<h1>"Why I want to become a developer?"</h1>
-    <p> I want to become a software developer because
-	    I like to make websites, filling colors and learning 
-		the logics by using javascript.
-	</p>
+	<h1>Why I want to become a developer?</h1>
+	<p>I want to become a software developer because I like to make websites, fill colors, and learn logic by using JavaScript.</p>
     <script type="text/javascript" src="./script.js">
-</script>
+  </script>
 
 </body>
 
